server/compilers/goLiteJS/src/test/ml1/invalid/decl4.go
// no var keyword, type or expression in declaration
package main

x
